[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/panel_action.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/char_action_box_outline.png" type="Texture" id=2]
[ext_resource path="res://ui/panel_action_box.gd" type="Script" id=3]
[ext_resource path="res://ui/char_action_box_bg.png" type="Texture" id=4]
[ext_resource path="res://ui/char_action_scrollbar_theme.tres" type="Theme" id=6]

[node name="Actions" type="MarginContainer"]
margin_top = 98.0
margin_right = 245.0
margin_bottom = 184.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 245.0
margin_bottom = 86.0
texture = ExtResource( 4 )

[node name="ScrollMargin" type="MarginContainer" parent="."]
margin_right = 245.0
margin_bottom = 86.0
custom_constants/margin_right = 2
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="ScrollContainer" type="ScrollContainer" parent="ScrollMargin"]
margin_right = 243.0
margin_bottom = 86.0
size_flags_vertical = 3
theme = ExtResource( 6 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="ListMargin" type="MarginContainer" parent="ScrollMargin/ScrollContainer"]
margin_right = 231.0
margin_bottom = 137.0
custom_constants/margin_top = 1

[node name="ActionList" type="VBoxContainer" parent="ScrollMargin/ScrollContainer/ListMargin"]
margin_top = 1.0
margin_right = 231.0
margin_bottom = 137.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack1" parent="ScrollMargin/ScrollContainer/ListMargin/ActionList" instance=ExtResource( 1 )]

[node name="Attack2" parent="ScrollMargin/ScrollContainer/ListMargin/ActionList" instance=ExtResource( 1 )]
margin_top = 17.0
margin_bottom = 34.0

[node name="Attack3" parent="ScrollMargin/ScrollContainer/ListMargin/ActionList" instance=ExtResource( 1 )]
margin_top = 34.0
margin_bottom = 51.0

[node name="Attack4" parent="ScrollMargin/ScrollContainer/ListMargin/ActionList" instance=ExtResource( 1 )]
margin_top = 51.0
margin_bottom = 68.0

[node name="Attack5" parent="ScrollMargin/ScrollContainer/ListMargin/ActionList" instance=ExtResource( 1 )]
margin_top = 68.0
margin_bottom = 85.0

[node name="Attack6" parent="ScrollMargin/ScrollContainer/ListMargin/ActionList" instance=ExtResource( 1 )]
margin_top = 85.0
margin_bottom = 102.0

[node name="Attack7" parent="ScrollMargin/ScrollContainer/ListMargin/ActionList" instance=ExtResource( 1 )]
margin_top = 102.0
margin_bottom = 119.0

[node name="Attack8" parent="ScrollMargin/ScrollContainer/ListMargin/ActionList" instance=ExtResource( 1 )]
margin_top = 119.0
margin_bottom = 136.0

[node name="Frame" type="TextureRect" parent="."]
margin_right = 245.0
margin_bottom = 86.0
mouse_filter = 2
texture = ExtResource( 2 )
